// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction.vue Should display infos properly with proxy contracts 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col">
      <h2 class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <div class="spacer"></div>
    <div align="right" class="col">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px; display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
          <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
        </svg>
        <div class="v-progress-circular__info"></div>
      </div>
      <div class="v-menu">
        <!---->
      </div><button type="button" class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default" role="button" aria-haspopup="true" aria-expanded="false"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-dots-vertical theme--light"></i></span></button>
    </div>
  </div> <span><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--small"><span class="v-chip__content"><i aria-hidden="true" class="v-icon notranslate white--text mr-1 mdi mdi-check theme--light" style="font-size: 16px;"></i>
                Transaction Succeeded
            </span></span></span>
  <!---->
  <div class="row my-2">
    <div class="text-truncate col col-5">
      <div class="text-overline">From</div> <span><a href="#/address/0xc056255e6b1e6001852f9f20587a964cb89418e7" class="">0xc056255e6b1e6001852f9f20587a964cb89418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc056255e6b1e6001852f9f20587a964cb89418e7" value="0xc056255e6b1e6001852f9f20587a964cb89418e7"></span>
      <!----></span>
    </div>
    <div class="text-truncate col col-5">
      <div class="text-overline">To</div> <span><a href="#/address/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" class="">USDC</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" value="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"></span>
      <!----></span>
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Gas Used</div> <span>43,713</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Price</div>
      59 gwei
    </div>
    <div class="col col-2">
      <div class="text-overline">Cost</div> <span>0.002579067 Ether</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Value</div>
      0 Ether
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Block</div> <a href="#/block/13012562" class="">13012562</a>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Limit</div>
      1,000,000,000
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Token Transfers</h3>
      <div class="v-data-table theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Amount: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Amount</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
              </tr>
            </thead>
            <tbody>
              <tr class="v-data-table__empty-wrapper">
                <td colspan="4">No data available</td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Balance Changes</h3>
    </div>
  </div>
  <div class="row" style="">
    <div class="col">
      <div>
        <!---->
        <!---->
        <h3 class="mb-2">Called Function</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text">
            transfer(

            <div class="ml-4" style="white-space: pre;"><span>
    address _to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div class="ml-4" style="white-space: pre;"><span>
    uint256 _value: 
    <span><!----> 500000000</span></span></div>
            )
          </div>
        </div>
        <h3 class="mb-2">Emitted Events</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text"><span><span><a href="#/address/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48" class="">USDC</a> <!----> <!----></span>.Transfer(
            </span>
            <div style="white-space: pre;"><span class="ml-4">
    address from: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0xC056255e6B1E6001852f9f20587A964cb89418e7" class="">0xC056255e...418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xC056255e6B1E6001852f9f20587A964cb89418e7" value="0xC056255e6B1E6001852f9f20587A964cb89418e7"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    address to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    uint256 value: 
    <span><!----> 500000000</span></span></div> <span>)</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`Transaction.vue Should display the transaction 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col">
      <h2 class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <div class="spacer"></div>
    <div align="right" class="col">
      <div role="progressbar" aria-valuemin="0" aria-valuemax="100" class="v-progress-circular mr-2 v-progress-circular--indeterminate primary--text" style="height: 16px; width: 16px; display: none;"><svg xmlns="http://www.w3.org/2000/svg" viewBox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715" style="transform: rotate(0deg);">
          <circle fill="transparent" cx="45.714285714285715" cy="45.714285714285715" r="20" stroke-width="5.714285714285714" stroke-dasharray="125.664" stroke-dashoffset="125.66370614359172px" class="v-progress-circular__overlay"></circle>
        </svg>
        <div class="v-progress-circular__info"></div>
      </div>
      <div class="v-menu">
        <!---->
      </div><button type="button" class="v-btn v-btn--flat v-btn--icon v-btn--round theme--light v-size--default" role="button" aria-haspopup="true" aria-expanded="false"><span class="v-btn__content"><i aria-hidden="true" class="v-icon notranslate mdi mdi-dots-vertical theme--light"></i></span></button>
    </div>
  </div> <span><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--small"><span class="v-chip__content"><i aria-hidden="true" class="v-icon notranslate white--text mr-1 mdi mdi-check theme--light" style="font-size: 16px;"></i>
                Transaction Succeeded
            </span></span></span>
  <!---->
  <div class="row my-2">
    <div class="text-truncate col col-5">
      <div class="text-overline">From</div> <span><a href="#/address/0xc056255e6b1e6001852f9f20587a964cb89418e7" class="">0xc056255e6b1e6001852f9f20587a964cb89418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc056255e6b1e6001852f9f20587a964cb89418e7" value="0xc056255e6b1e6001852f9f20587a964cb89418e7"></span>
      <!----></span>
    </div>
    <div class="text-truncate col col-5">
      <div class="text-overline">To</div> <span><a href="#/address/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" class="">USDC</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" value="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"></span>
      <!----></span>
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Gas Used</div> <span>43,713</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Price</div>
      59 gwei
    </div>
    <div class="col col-2">
      <div class="text-overline">Cost</div> <span>0.002579067 Ether</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Value</div>
      0 Ether
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Block</div> <a href="#/block/13012562" class="">13012562</a>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Limit</div>
      1,000,000,000
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Token Transfers</h3>
      <div class="v-data-table theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Amount: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Amount</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
              </tr>
            </thead>
            <tbody>
              <tr class="v-data-table__empty-wrapper">
                <td colspan="4">No data available</td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Balance Changes</h3>
    </div>
  </div>
  <div class="row" style="">
    <div class="col">
      <div>
        <!---->
        <!---->
        <h3 class="mb-2">Called Function</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text">
            transfer(

            <div class="ml-4" style="white-space: pre;"><span>
    address _to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div class="ml-4" style="white-space: pre;"><span>
    uint256 _value: 
    <span><!----> 500000000</span></span></div>
            )
          </div>
        </div>
        <h3 class="mb-2">Emitted Events</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text"><span><span><a href="#/address/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48" class="">USDC</a> <!----> <!----></span>.Transfer(
            </span>
            <div style="white-space: pre;"><span class="ml-4">
    address from: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0xC056255e6B1E6001852f9f20587A964cb89418e7" class="">0xC056255e...418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xC056255e6B1E6001852f9f20587A964cb89418e7" value="0xC056255e6B1E6001852f9f20587A964cb89418e7"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    address to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    uint256 value: 
    <span><!----> 500000000</span></span></div> <span>)</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`Transaction.vue Should not display the menu if public explorer 1`] = `
<div class="container container--fluid">
  <div class="row">
    <div class="col">
      <h2 class="text-truncate mb-2">Tx 0x05d709954d59bfaa43bcf629b0a415d30e56ab1400d96dc7bd0ed1664a702759</h2>
    </div>
    <!---->
  </div> <span><span class="success mr-2 v-chip v-chip--no-color theme--light v-size--small"><span class="v-chip__content"><i aria-hidden="true" class="v-icon notranslate white--text mr-1 mdi mdi-check theme--light" style="font-size: 16px;"></i>
                Transaction Succeeded
            </span></span></span>
  <!---->
  <div class="row my-2">
    <div class="text-truncate col col-5">
      <div class="text-overline">From</div> <span><a href="#/address/0xc056255e6b1e6001852f9f20587a964cb89418e7" class="">0xc056255e6b1e6001852f9f20587a964cb89418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc056255e6b1e6001852f9f20587a964cb89418e7" value="0xc056255e6b1e6001852f9f20587a964cb89418e7"></span>
      <!----></span>
    </div>
    <div class="text-truncate col col-5">
      <div class="text-overline">To</div> <span><a href="#/address/0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" class="">USDC</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48" value="0xa0b86991c6218b36c1d19d4a2e9eb0ce3606eb48"></span>
      <!----></span>
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Gas Used</div> <span>43,713</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Price</div>
      59 gwei
    </div>
    <div class="col col-2">
      <div class="text-overline">Cost</div> <span>0.002579067 Ether</span>
    </div>
    <div class="col col-2">
      <div class="text-overline">Value</div>
      0 Ether
    </div>
  </div>
  <div class="row mb-4">
    <div class="col col-2">
      <div class="text-overline">Block</div> <a href="#/block/13012562" class="">13012562</a>
    </div>
    <div class="col col-2">
      <div class="text-overline">Gas Limit</div>
      1,000,000,000
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Token Transfers</h3>
      <div class="v-data-table theme--light">
        <div class="v-data-table__wrapper">
          <table>
            <colgroup>
              <col class="">
              <col class="">
              <col class="">
              <col class="">
            </colgroup>
            <thead class="v-data-table-header">
              <tr>
                <th role="columnheader" scope="col" aria-label="From: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>From</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="To: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>To</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Token: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Token</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
                <th role="columnheader" scope="col" aria-label="Amount: Not sorted. Activate to sort ascending." aria-sort="none" class="text-start sortable"><span>Amount</span><i aria-hidden="true" class="v-icon notranslate v-data-table-header__icon mdi mdi-arrow-up theme--light" style="font-size: 18px;"></i></th>
              </tr>
            </thead>
            <tbody>
              <tr class="v-data-table__empty-wrapper">
                <td colspan="4">No data available</td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
  <div class="row my-2" style="display: none;">
    <div class="col">
      <h3 class="mb-2">Balance Changes</h3>
    </div>
  </div>
  <div class="row" style="">
    <div class="col">
      <div>
        <!---->
        <!---->
        <h3 class="mb-2">Called Function</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text">
            transfer(

            <div class="ml-4" style="white-space: pre;"><span>
    address _to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div class="ml-4" style="white-space: pre;"><span>
    uint256 _value: 
    <span><!----> 500000000</span></span></div>
            )
          </div>
        </div>
        <h3 class="mb-2">Emitted Events</h3>
        <div class="my-2 v-card v-sheet v-sheet--outlined theme--light">
          <div class="v-card__text"><span><span><a href="#/address/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48" class="">USDC</a> <!----> <!----></span>.Transfer(
            </span>
            <div style="white-space: pre;"><span class="ml-4">
    address from: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0xC056255e6B1E6001852f9f20587A964cb89418e7" class="">0xC056255e...418e7</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xC056255e6B1E6001852f9f20587A964cb89418e7" value="0xC056255e6B1E6001852f9f20587A964cb89418e7"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    address to: 
    <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span><span><span><a href="#/address/0x4f6742bADB049791CD9A37ea913f2BAC38d01279" class="">0x4f6742bA...01279</a> <span>
        &nbsp; <button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0x4f6742bADB049791CD9A37ea913f2BAC38d01279" value="0x4f6742bADB049791CD9A37ea913f2BAC38d01279"></span>
              <!----></span></span></span></span></span>
            </div>
            <div style="white-space: pre;"><span class="ml-4">
    uint256 value: 
    <span><!----> 500000000</span></span></div> <span>)</span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
</div>
`;
